--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -3,12 +3,28 @@ header {
     background-image: url(../img/business.jpg);
     background-repeat: no-repeat;
     height: 400px;
+
     h2 { 
         font-size: 1.2rem;
     }
+
     form { 
         margin-top: 50px;
         max-width: 400px;
+    }
+}
+
+.card {
+    margin: 25px 0;
+}
+
+.loading-element {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    display: none;
+    &.loading {
+        display: block;
     }
 }
     
